<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/road"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/grey_dark">

        <TextView
            android:id="@+id/txt1"
            android:textAppearance="@style/TextAppearance.XXXXL"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String0004"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/String0008"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <EditText
            style="@style/IntroEditText"
            android:id="@+id/edit1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/String0093"
            android:layout_marginTop="10dp"/>

        <EditText
            style="@style/IntroEditText"
            android:id="@+id/edit4"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/String0094"
            android:layout_marginTop="10dp"/>

        <EditText
            style="@style/IntroEditText"
            android:id="@+id/edit2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/String0091"
            android:layout_marginTop="10dp"/>

        <EditText
            style="@style/IntroEditText"
            android:id="@+id/edit3"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/String0092"
            android:layout_marginTop="10dp"/>




    </LinearLayout>


    <Button
        android:id="@+id/btn1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/String0009"
        />


</RelativeLayout>
