<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.XXXL"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="TV"
            android:singleLine="true"
            android:lines="1"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white">


        <TextView
            android:id="@+id/fnd_txt_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="[fleet31]"
            android:singleLine="true"
            android:lines="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="@android:color/white">


            <ImageView
                android:id="@+id/fnd_tv_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Large"
                android:textColor="@color/black"
                android:src="@drawable/connection_icon_selector"
                android:singleLine="true"
                android:lines="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Large"
                android:textColor="@color/black"
                android:src="@drawable/watching_icon_selector"
                android:singleLine="true"
                android:lines="1"
                />

        </LinearLayout>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@android:color/white">


         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.XXXL"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/String0060"
            android:singleLine="true"
            android:lines="1"
            />



    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@android:color/white">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0061"
            android:singleLine="true"
            android:lines="1"
            />



        <com.rey.material.widget.Switch
            android:id="@+id/fnd_sw1"
            style="@style/SwitchDrawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@android:color/white">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0062"
            android:singleLine="true"
            android:lines="1"
            />



        <com.rey.material.widget.Switch
            android:id="@+id/fnd_sw2"
            style="@style/SwitchDrawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@android:color/white">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0063"
            android:singleLine="true"
            android:lines="1"
            />



        <com.rey.material.widget.Switch
            android:id="@+id/fnd_sw3"
            style="@style/SwitchDrawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.XXXL"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/String0066"
        android:singleLine="true"
        android:lines="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0080"
            android:singleLine="true"
            android:lines="1"
            />

        <EditText
            style="@style/IntroEditText"
            android:id="@+id/fnd_edit1"
            android:inputType="numberDecimal"
            android:layout_alignParentRight="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=".."/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0081"
            android:singleLine="true"
            android:lines="1"
            />

        <EditText
            style="@style/IntroEditText"
            android:id="@+id/fnd_edit2"
            android:inputType="numberDecimal"
            android:layout_alignParentRight="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=".."/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/black"
            android:text="@string/String0085"
            android:singleLine="true"
            android:lines="1"
            />

        <Spinner
            android:id="@+id/fnd_spinner1"
            style="@style/IntroSpinner"
            android:gravity="center_horizontal"
            android:padding="0dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

        </Spinner>



    </RelativeLayout>








</LinearLayout>